--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,17 @@
 <footer class="footer">
   <small>
-    <a href="http://railstutorial.org/">Rails Tutorial</a>
-    by Michael Hartl
+    <ul>
+      <li> <%= link_to 'Product',about_path %> </li>
+      <li><%= link_to 'Team',about_path %>          </li>
+      <li><%= link_to 'Our Story',about_path %>     </li>
+      <li><%= link_to 'Future Plans',about_path %>       </li>
+      <li><%= link_to 'Join The Team',about_path %>       </li>
+      <li><%= link_to 'Partnerships',about_path %>         </li>
+      <li><%= link_to 'Contact Us',about_path %>            </li>
+    </ul>
+
   </small>
   <nav>
-    <ul>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
-    </ul>
+    <span>&copy; Copyright 2012 Rooms Inc. All Rights Reserved</span>
   </nav>
 </footer>
