--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "sample app", '#', id: "logo" %>
+      <%= link_to "rooms", '#', id: "logo" %>
       <nav>
         <ul class="nav pull-right">
           <li><%= link_to "Home", root_path  %></li>
@@ -31,7 +31,6 @@
               <li><%= link_to "Sign in", signin_path %></li>
           <% end %>
           <!-- End If -->
-
 
           <!--<li><%= link_to "Sign in", signin_path %></li>-->
 
