--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Id:</b>
+  <%= @item.id %>
+</p>
+
+<p>
   <b>Name:</b>
   <%= @item.name %>
 </p>
@@ -33,11 +38,6 @@
 <p>
   <b>Clickable:</b>
   <%= @item.clickable %>
-</p>
-
-<p>
-  <b>Folder name:</b>
-  <%= @item.folder_name %>
 </p>
 
 
