--- a/app/views/bundles/show.html.erb
+++ b/app/views/bundles/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Id:</b>
+  <%= @bundle.id %>
+</p>
+
+<p>
   <b>Name:</b>
   <%= @bundle.name %>
 </p>
