--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,11 @@
 <h1>Listing items</h1>
 
-<table>
+<%= will_paginate @items %>
+
+<table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="50%" cellspacing="2" cellpadding="3">
+
   <tr>
+    <th>Item Id</th>
     <th>Name</th>
     <th>X</th>
     <th>Y</th>
@@ -9,7 +13,6 @@
     <th>Width</th>
     <th>Height</th>
     <th>Clickable</th>
-    <th>Folder name</th>
     <th></th>
     <th></th>
     <th></th>
@@ -17,6 +20,8 @@
 
 <% @items.each do |item| %>
   <tr>
+
+    <td><%= item.id %></td>
     <td><%= item.name %></td>
     <td><%= item.x %></td>
     <td><%= item.y %></td>
@@ -24,13 +29,13 @@
     <td><%= item.width %></td>
     <td><%= item.height %></td>
     <td><%= item.clickable %></td>
-    <td><%= item.folder_name %></td>
     <td><%= link_to 'Show', item %></td>
     <td><%= link_to 'Edit', edit_item_path(item) %></td>
     <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
+<%= will_paginate %>
 
 <br />
 
