--- a/app/views/items_designs/index.html.erb
+++ b/app/views/items_designs/index.html.erb
@@ -1,12 +1,18 @@
 <h1>Listing items_designs</h1>
 
-<table>
+<%= will_paginate @items_designs %>
+<table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="100%" cellspacing="2" cellpadding="3">
   <tr>
+    <th>Id</th>
     <th>Name</th>
     <th>Description</th>
-    <th>Item</th>
-    <th>Bundle</th>
-    <th>Image name</th>
+    <th>Item_Design Image name</th>
+    <th>Item id</th>
+    <th>Item Name</th>
+    <th>Bundle id</th>
+    <th>Bundle name</th>
+    <th>Bundle image_name</th>
+
     <th></th>
     <th></th>
     <th></th>
@@ -14,11 +20,35 @@
 
 <% @items_designs.each do |items_design| %>
   <tr>
+    <td><%= items_design.id %></td>
     <td><%= items_design.name %></td>
     <td><%= items_design.description %></td>
-    <td><%= items_design.item_id %></td>
-    <td><%= items_design.bundle_id %></td>
-    <td><%= image_tag items_design.image_name.url(:small) %></td>
+    <td><%= image_tag items_design.image_name.url(:medium) %></td>
+
+
+    <%  if items_design.item.nil? %>
+        <td></td>
+        <td></td>
+    <%  else %>
+        <td><%= items_design.item_id %></td>
+        <td><%= items_design.item.name %></td>
+
+    <%  end %>
+
+
+
+    <%  if items_design.bundle.nil? %>
+        <td></td>
+        <td></td>
+        <td></td>
+    <%  else %>
+        <td><%= items_design.bundle.id  %></td>
+        <td><%= items_design.bundle.name  %></td>
+        <td> <%= image_tag items_design.bundle.image_name.url(:small) %> </td>
+     <%  end %>
+
+
+
     <td><%= link_to 'Show', items_design %></td>
     <td><%= link_to 'Edit', edit_items_design_path(items_design) %></td>
     <td><%= link_to 'Destroy', items_design, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,6 +56,7 @@
 <% end %>
 </table>
 
+<%= will_paginate %>
 <br />
 
 <%= link_to 'New Items design', new_items_design_path %>
