--- a/app/views/bookmarks_categories/_form.html.erb
+++ b/app/views/bookmarks_categories/_form.html.erb
@@ -1,25 +1,40 @@
-<%= form_for(@bookmarks_category) do |f| %>
-  <% if @bookmarks_category.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@bookmarks_category.errors.count, "error") %> prohibited this bookmarks_category from being saved:</h2>
+<div class="row">
+  <div class="span6 offset3">
 
-      <ul>
-      <% @bookmarks_category.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+      <%= form_for(@bookmarks_category) do |f| %>
+      <% if @bookmarks_category.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@bookmarks_category.errors.count, "error") %> prohibited this bookmarks_category from being saved:</h2>
+
+          <ul>
+          <% @bookmarks_category.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :item_id %><br />
-    <%= f.number_field :item_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+      <div class="field">
+         <%= f.label :id %><br />
+         <%= f.text_field :id ,:readonly => true%>
+      </div>
+
+
+        <div class="field">
+        <%= f.label :name %><br />
+        <%= f.text_field :name %>
+      </div>
+
+        <div class="field">
+          <%= f.label :item_id %><br />
+          <%= f.collection_select :item_id, Item.all, :id, :id_and_item , :prompt => true %>
+        </div>
+
+
+        <div class="actions">
+        <%= f.submit %>
+      </div>
+    </div>
+ </div>
+
 <% end %>
