--- a/app/views/bundles/_form.html.erb
+++ b/app/views/bundles/_form.html.erb
@@ -1,40 +1,47 @@
-<%= form_for(@bundle) do |f| %>
-  <% if @bundle.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@bundle.errors.count, "error") %> prohibited this bundle from being saved:</h2>
+<div class="row">
+  <div class="span6 offset3">
 
-      <ul>
-      <% @bundle.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+
+      <%= form_for(@bundle , :html => {:multipart => true}) do |f| %>
+      <% if @bundle.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@bundle.errors.count, "error") %> prohibited this bundle from being saved:</h2>
+
+          <ul>
+          <% @bundle.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+      <div class="field">
+          <%= f.label :id %><br />
+          <%= f.text_field :id ,:readonly => true%>
+      </div>
+
+       <div class="field">
+        <%= f.label :name %><br />
+        <%= f.text_field :name %>
+      </div>
+      <div class="field">
+        <%= f.label :description %><br />
+        <%= f.text_area :description %>
+      </div>
+
+      <div class="field">
+        <%= f.label :image_name %><br />
+        <%= f.file_field  :image_name %>
+      </div>
+
+      <div class="field">
+        <%= f.label :theme_id %><br />
+          <%= f.collection_select :theme_id, Theme.all, :id, :id_and_theme , :prompt => true  %>
+      </div>
+
+      <div class="actions">
+             <%= f.submit %>
+      </div>
   </div>
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
-
-  <div class="field">
-    <%= f.label :image_name %><br />
-    <%= f.file_field  :image_name %>
-  </div>
-
-    <div class="field">
-      <%= f.label :theme_id %><br />
-      <%= f.number_field :theme_id %>
-
-    </div>
-
-
-
-
-    <div class="actions">
-    <%= f.submit %>
-  </div>
+</div>
 <% end %>
