--- a/app/views/items_designs/_form.html.erb
+++ b/app/views/items_designs/_form.html.erb
@@ -1,46 +1,62 @@
-<%= form_for(@items_design, :html => {:multipart => true} ) do |f| %>
-  <% if @items_design.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@items_design.errors.count, "error") %> prohibited this items_design from being saved:</h2>
+<div class="row">
+  <div class="span6 offset3">
 
-      <ul>
-      <% @items_design.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+      <%= form_for(@items_design, :html => {:multipart => true} ) do |f| %>
+      <% if @items_design.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@items_design.errors.count, "error") %> prohibited this items_design from being saved:</h2>
+
+          <ul>
+          <% @items_design.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :item_id %><br />
-    <%= f.number_field :item_id %>
-  </div>
-  <div class="field">
-    <%= f.label :bundle_id %><br />
-    <%= f.number_field :bundle_id %>
-  </div>
-  <div class="field">
-    <%= f.label :image_name %><br />
-    <%= f.file_field :image_name %>
-  </div>
-    <div class="field">
-      <%= f.label :image_name_hover %><br />
-      <%= f.file_field :image_name_hover %>
-    </div>
-    <div class="field">
-      <%= f.label :image_name_selection %><br />
-      <%= f.file_field :image_name_selection %>
-    </div>
+      <div class="field">
+          <%= f.label :id %><br />
+          <%= f.text_field :id ,:readonly => true%>
+      </div>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
+        <div class="field">
+        <%= f.label :name %><br />
+        <%= f.text_field :name %>
+      </div>
+      <div class="field">
+        <%= f.label :description %><br />
+        <%= f.text_area :description %>
+      </div>
+      <div class="field">
+          <%= f.label :item_id %><br />
+          <%= f.collection_select :item_id, Item.all, :id, :id_and_item , :prompt => true  %>
+      </div>
+
+
+        <div class="field">
+         <%= f.label :bundle_id %><br />
+         <%= f.collection_select :bundle_id, Bundle.all, :id, :id_and_bundle, :prompt => true  %>
+        </div>
+
+        <div class="field">
+        <%= f.label :image_name %><br />
+        <%= f.file_field :image_name %>
+      </div>
+        <div class="field">
+          <%= f.label :image_name_hover %><br />
+          <%= f.file_field :image_name_hover %>
+        </div>
+        <div class="field">
+          <%= f.label :image_name_selection %><br />
+          <%= f.file_field :image_name_selection %>
+        </div>
+
+
+
+        <div class="actions">
+        <%= f.submit %>
+      </div>
+    </div>
+ </div>
 <% end %>
