--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,23 @@
                   </li>
                 </ul>
               </li>
-          <% else %>
+
+              <li id="fat-menu" class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  Admin <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Items", items_path  %></li>
+                  <li><%= link_to "Items_design", items_designs_path  %></li>
+                  <li><%= link_to "Themes", themes_path  %></li>
+                  <li><%= link_to "Bundles", bundles_path  %></li>
+                  <li><%= link_to "Bundles Bookmark", bundles_bookmarks_path  %></li>
+                  <li><%= link_to "Bookmarks", bookmarks_path  %></li>
+                  <li><%= link_to "Bookmarks Categories", bookmarks_categories_path  %></li>
+                </ul>
+              </li>
+
+        <% else %>
               <li><%= link_to "Sign in", signin_path %></li>
           <% end %>
           <!-- End If -->
