--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -1,35 +1,46 @@
-<%= form_for @theme , :html => {:multipart => true} do |f| %>
-  <% if @theme.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@theme.errors.count, "error") %> prohibited this theme from being saved:</h2>
+<div class="row">
+  <div class="span6 offset3">
 
-      <ul>
-      <% @theme.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+      <%= form_for @theme , :html => {:multipart => true} do |f| %>
+      <% if @theme.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@theme.errors.count, "error") %> prohibited this theme from being saved:</h2>
+
+          <ul>
+          <% @theme.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :image_name %><br />
-    <%= f.file_field :image_name %>
-  </div>
+      <div class="field">
+          <%= f.label :id %><br />
+          <%= f.text_field :id ,:readonly => true%>
+      </div>
 
-  <div class="field">
-      <%= f.label :image_name_selection %><br />
-      <%= f.file_field :image_name_selection %>
-  </div>
 
-    <div class="actions">
-    <%= f.submit %>
-  </div>
+        <div class="field">
+        <%= f.label :name %><br />
+        <%= f.text_field :name %>
+      </div>
+      <div class="field">
+        <%= f.label :description %><br />
+        <%= f.text_area :description %>
+      </div>
+      <div class="field">
+        <%= f.label :image_name %><br />
+        <%= f.file_field :image_name %>
+      </div>
+
+      <div class="field">
+          <%= f.label :image_name_selection %><br />
+          <%= f.file_field :image_name_selection %>
+      </div>
+
+        <div class="actions">
+        <%= f.submit %>
+      </div>
+   </div>
+ </div>
 <% end %>
