--- a/app/views/bundles_bookmarks/index.html.erb
+++ b/app/views/bundles_bookmarks/index.html.erb
@@ -33,9 +33,9 @@
         <td></td>
     <%  else %>
         <td><%= bundles_bookmark.bookmark.id %></td>
-        <td><%= bundles_bookmark.bookmark.bookmark_url %></td>
+        <td><%= bundles_bookmark.bookmark.bookmark_url.to_s %></td>
         <td><%= bundles_bookmark.bookmark.title  %></td>
-        <td> <%= image_tag bundles_bookmark.bookmark.image_name.url(:small) %> </td>
+        <td> <%= image_tag bundles_bookmark.bookmark.image_name.url(:small).to_s %> </td>
     <%  end %>
 
 
