--- a/app/views/bundles/show.html.erb
+++ b/app/views/bundles/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <b>Image name:</b>
-  <%= image_tag @bundle.image_name.url %>
+  <%= image_tag @bundle.image_name.url.to_s %>
   <%= @bundle.image_name.to_s %>
 </p>
 
