add order to table

--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -34,7 +34,7 @@
 
         <div class="field">
         <%= f.label :bookmark_url %><br />
-        <%= f.text_field :bookmark_url %>
+        <%= f.url_field :bookmark_url %>
       </div>
       <div class="field">
         <%= f.label :title %><br />
