--- a/app/views/items_designs/show.html.erb
+++ b/app/views/items_designs/show.html.erb
@@ -14,11 +14,11 @@
   <b>Item:</b>
 
   <%  if @items_design.item.nil? %>
-    <td></td>
-    <td></td>
+    
+    
 <%  else %>
-    <td><%= @items_design.item_id %></td>
-    <td><%= @items_design.item.name %></td>
+    <%= @items_design.item_id %>
+    <%= @items_design.item.name %>
 
 <%  end %>
 
@@ -28,13 +28,13 @@
 <p>
   <b>Bundle:</b>
   <%  if @items_design.bundle.nil? %>
-    <td></td>
-    <td></td>
-    <td></td>
+    
+    
+    
 <%  else %>
-    <td><%= @items_design.bundle.id  %></td>
-    <td><%= @items_design.bundle.name  %></td>
-    <td> <%= image_tag @items_design.bundle.image_name.url(:small).to_s %> </td>
+    <%= @items_design.bundle.id  %>
+    <%= @items_design.bundle.name  %>
+     <%= image_tag @items_design.bundle.image_name.url(:small).to_s %> 
 <%  end %>
 
 </p>
