--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,20 @@
 <% provide(:title, @user.name) %>
+<h1>This is My room</h1>
 <div class="row">
   <aside class="span4">
     <section>
-        <h1>
-            <%= @user.name %>
-            <%= gravatar_for @user %>
-        </h1>
+      <h1>
+        <%= @user.name %>
+        <%= gravatar_for @user %>
+      </h1>
 
-         <%= @user.name %>, <%= @user.email %>
+      <%= @user.name %>,</br>
+      <%= @user.email %></br>
+      <%= @user.username %></br>
+
     </section>
   </aside>
-</div>
 
+
+</div>
 
