--- a/app/views/users/room.html.erb
+++ b/app/views/users/room.html.erb
@@ -14,34 +14,38 @@
 
     </section>
   </aside>
-
-
 </div>
 
 <!-- this part is for testing -->
-<div id="placeholder"></div>
-<div class="my-new-list"></div>
-
 
 <%= link_to_function "Add Row", "addRow()" %>
 
 <%= link_to_function "Greeting", "alert('Hello world!')", :class => "nav_link" %>
 
-<%= button_to "Add Row", "javascript:addRow()" %>
+<%= button_to "rooms_get_show", "javascript:rooms_get_show()" %>
+
+<%= button_to "themes_get_index", "javascript:themes_get_index()" %>
+
+<div id="placeholder"></div>
+
+
 
 
 <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+
+
+<!--  room_get_show  -->
 <script>
 
-        var url = 'http://'+document.location.host+'/rooms/'+<%= @user.id %> +'.json'
-        alert(url)
+        var rooms_get_show_url = 'http://'+document.location.host+'/rooms/'+<%= @user.id %> +'.json'
+        alert(rooms_get_show_url)
 
         var applicationList = [];
         var image_name_list = [];
 
-        function addRow(){
+        function rooms_get_show(){
 
-           $.getJSON(url, function(data) {
+           $.getJSON(rooms_get_show_url, function(data) {
 
            var output="<h1>User </h1>";
            output+="<ul>";
@@ -150,4 +154,55 @@
         }
 
 </script>
+
+
+<!--  themes_get_index  -->
+<script>
+
+    var themes_get_index_url = 'http://'+document.location.host+'/themes.json'
+    alert(themes_get_index_url)
+
+    var applicationList = [];
+    var image_name_list = [];
+
+    function themes_get_index(){
+
+        $.getJSON(themes_get_index_url, function(data) {
+
+            var output="<h1>all themes </h1>";
+
+            jQuery.each(data, function (i, app) {
+                applicationList[i] = [];
+                applicationList[i]['id'] = app['id'];
+                applicationList[i]['description'] = app['description'];
+                applicationList[i]['name'] = app['name'];
+                applicationList[i]['image_name'] = app['image_name'];
+
+                applicationList[i]['image_name_original'] = app['image_name']['url'];
+
+                output+="<ul>";
+                output+="<li>" + applicationList[i]['id']+"</li>";
+                output+="<li>" + applicationList[i]['description']+"</li>";
+                output+="<li>" + applicationList[i]['name']+"</li>";
+                output+="<li>" + applicationList[i]['image_name_original']+"</li>";
+                output+="</ul>";
+
+
+                jQuery.each(applicationList[i]['image_name'], function (x, app_image_name) {
+                    image_name_list[x] = [];
+                    image_name_list[x]['url'] = app_image_name['url'];
+                    output+="<ul>";
+                    output+="<li>" + image_name_list[x]['url'] +"</li>";
+                    output+="</ul>";
+
+                });
+            });
+            document.getElementById("placeholder").innerHTML=output;
+
+        });
+
+    }
+
+</script>
+
 
