add more contract

--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -5,7 +5,7 @@
     <section>
       <h1>
         <%= @user.name %>
-        <%= gravatar_for @user %>
+        <!--<%= gravatar_for @user %>-->
       </h1>
 
       name: <%= @user.name %>,</br>
