--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,8 @@
       <h1>
         <%= @user.name %>
         <%= gravatar_for @user %>
+        <%= @user.image_name %>
+
       </h1>
 
       <%= @user.name %>,</br>
