--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,5 +20,9 @@
 
         <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
     <% end %>
+
+    <p><%= link_to "forgotten password?", new_password_reset_path %></p>
+
+
   </div>
 </div>
