--- a/app/views/users_mailer/forget_password_email.text.erb
+++ b/app/views/users_mailer/forget_password_email.text.erb
@@ -1,3 +1,5 @@
-UsersMailer#forget_password_email
+To reset your password click the URL below.
 
-<%= @greeting %>, find me in app/views/app/views/users_mailer/forget_password_email.text.erb
+<%= edit_password_reset_url(@user.password_reset_token) %>
+
+If you did not request your password to be reset please ignore this email and your password will stay as it is.
