Key request email

--- a/app/views/users_mailer/friend_request_email.text.erb
+++ b/app/views/users_mailer/friend_request_email.text.erb
@@ -1,3 +1,7 @@
-UsersMailer#friend_request_email
 
-<%= @greeting %>, find me in app/views/app/views/users_mailer/friend_request_email.text.erb
+<%= @greeting %>
+
+your friend <%= @user.name %> want to connect with you
+
+
+thank you
