--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,6 @@
 <li>
-  <%= gravatar_for user, size: 52 %>
+
+  <td><%= image_tag user.image_name.url().to_s,width: 100, height:100 %></td>
   <%= link_to user.name, user %>
   <% if current_user.admin? && !current_user?(user) %>
       | <%= link_to "delete", user, method: :delete,
