--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,9 +5,7 @@
     <section>
       <h1>
         <%= @user.name %>
-        <%= gravatar_for @user %>
-        <%= @user.image_name %>
-
+        <%= image_tag @user.image_name.url().to_s,width: 100, height:100 %>
       </h1>
 
       <%= @user.name %>,</br>
