--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -1,4 +1,7 @@
-<div id="contaniner" > Loading rooms... waiting for backbone :) ...
+<div id="c" > Loading rooms... waiting for backbone :) ...
+
+
+</div>
 
         <% provide(:title, @user.name) %>
         <h1>This is My room</h1>
@@ -17,4 +20,4 @@
           </aside>
         </div>
 
-</div>
+
