--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -39,11 +39,12 @@
     <%= f.label :height %><br />
     <%= f.number_field :height %>
   </div>
-  <div class="field">
-    <%= f.label :section_id %><br />
-    <%= f.number_field :section_id %>
-  </div>
-  <div class="actions">
+    <div class="field">
+      <%= f.label :section_id %><br />
+      <%= f.collection_select :section_id, Section.all, :id, :id_and_section , :prompt => true  %>
+    </div>
+
+    <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
