--- a/app/views/bundles_items_designs/_form.html.erb
+++ b/app/views/bundles_items_designs/_form.html.erb
@@ -11,19 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :items_design_id %><br />
-    <%= f.collection_select :items_design_id, ItemsDesign.all, :id, :id_and_item_design , :prompt => true  %>
-  </div>
-  <div class="field">
-    <%= f.label :location_id %><br />
-    <%= f.collection_select :location_id, ItemsLocation.all  , :location_id, :item_location_section , :prompt => true  %>
-  </div>
-  <div class="field">
-    <%= f.label :bundle_id %><br />
-    <%= f.collection_select :bundle_id, Bundle.all, :id, :id_and_bundle , :prompt => true  %>
 
-  </div>
+    <div class="field">
+      <%= f.label :bundle_id %><br />
+      <%= f.collection_select :bundle_id, Bundle.order(:id), :id, :id_and_bundle_section , :prompt => true  %>
+    </div>
+
+    <div class="field">
+      <%= f.label :location_id %><br />
+      <%= f.collection_select :location_id, ItemsLocation.all , :location_id, :item_location_section , :prompt => true  %>
+    </div>
+
+     <div class="field">
+        <%= f.label :items_design_id %><br />
+        <%= f.collection_select :items_design_id, ItemsDesign.all, :id, :id_and_item_design , :prompt => true  %>
+    </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
