--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,13 +33,24 @@
                   Admin <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
+                  <li><%= link_to "Section", sections_path  %></li>
                   <li><%= link_to "Items", items_path  %></li>
+                  <li><%= link_to "Location", locations_path  %></li>
+                  <li><%= link_to "Relation Items and Locations", items_locations_path %></li>
                   <li><%= link_to "Items_design", items_designs_path  %></li>
                   <li><%= link_to "Themes", themes_path  %></li>
                   <li><%= link_to "Bundles", bundles_path  %></li>
                   <li><%= link_to "Bundles Bookmark", bundles_bookmarks_path  %></li>
+                  <li><%= link_to "Bundles Items Design ", bundles_items_designs_path  %></li>
                   <li><%= link_to "Bookmarks", bookmarks_path  %></li>
                   <li><%= link_to "Bookmarks Categories", bookmarks_categories_path  %></li>
+                  <li><%= link_to "Feedback", feedbacks_path  %></li>
+                  <li><%= link_to "Notification", notifications_path  %></li>
+
+
+
+
+
                 </ul>
               </li>
 
