--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -12,6 +12,7 @@
                 <%= @user.name %>
               </h1>
 
+              name: <%= @user.id %>,</br>
               name: <%= @user.name %>,</br>
               email:  <%= @user.email %></br>
               username: <%= @user.username %></br>
