--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,6 +28,7 @@
                 </ul>
               </li>
 
+              <% if is_admin? %>
               <li id="fat-menu" class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   Admin <b class="caret"></b>
@@ -36,7 +37,7 @@
                   <li><%= link_to "Section", sections_path  %></li>
                   <li><%= link_to "Items", items_path  %></li>
                   <li><%= link_to "Location", locations_path  %></li>
-                  <li><%= link_to "Relation Items and Locations", items_locations_path %></li>
+                  <li><%= link_to "Relation --> Items and Locations", items_locations_path %></li>
                   <li><%= link_to "Items_design", items_designs_path  %></li>
                   <li><%= link_to "Themes", themes_path  %></li>
                   <li><%= link_to "Bundles", bundles_path  %></li>
@@ -49,10 +50,10 @@
 
 
 
-
-
                 </ul>
               </li>
+               <% end %>
+
 
         <% else %>
               <li><%= link_to "Sign in", signin_path %></li>
