--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to "Profile", current_user %></li>
                   <!-- is equivalent to -->
-                  <!--<li><%= link_to "Profile", user_path(current_user) %></li>-->
+                  <!--<li><%= link_to "My Room", user_path(current_user) %></li>-->
 
                   <li><%= link_to "Settings", edit_user_path(current_user) %></li>
                   <li class="divider"></li>
@@ -29,6 +29,7 @@
               </li>
 
               <% if is_admin? %>
+
               <li id="fat-menu" class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   Admin <b class="caret"></b>
@@ -48,11 +49,9 @@
                   <li><%= link_to "Feedback", feedbacks_path  %></li>
                   <li><%= link_to "Notification", notifications_path  %></li>
 
-
-
                 </ul>
               </li>
-               <% end %>
+              <% end %>
 
 
         <% else %>
