--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -4,7 +4,7 @@
 </div>
 
         <% provide(:title, @user.name) %>
-        <h1>This is My room</h1>
+        <h1>This is My room on RoR</h1>
         <div class="row">
           <aside class="span4">
             <section>
