--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,15 +10,14 @@
 
           <!-- Start If  -->
           <% if signed_in? %>
-              <li><%= link_to "Users", users_path %></li>
               <li id="fat-menu" class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   Account <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Profile", current_user %></li>
-                  <!-- is equivalent to -->
-                  <!--<li><%= link_to "My Room", user_path(current_user) %></li>-->
+
+                  <li><%= link_to "My Room", room_rooms_path(current_user.username) %></li>
 
                   <li><%= link_to "Settings", edit_user_path(current_user) %></li>
                   <li class="divider"></li>
@@ -35,6 +34,7 @@
                   Admin <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
+                  <li><%= link_to "Users", users_path %></li>
                   <li><%= link_to "Section", sections_path  %></li>
                   <li><%= link_to "Items", items_path  %></li>
                   <li><%= link_to "Location", locations_path  %></li>
