--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,31 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
+<%= will_paginate %>
+
+
+
+<table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="100%" cellspacing="2" cellpadding="3">
+  <tr>
+    <th>User Id</th>
+    <th>Name</th>
+    <th>Email</th>
+    <th>UserName</th>
+    <th>Image name</th>
+
+  </tr>
+
+  <% @users.each do |user| %>
+      <tr>
+        <td><%= user.id %></td>
+        <td><%= user.name %></td>
+        <td><%= user.email %></td>
+        <td><%= user.username %></td>
+        <td><%= image_tag(user.image_name.url().to_s,width: 100, height:100) %></td>
+
+      </tr>
+  <% end %>
+</table>
 
 <%= will_paginate %>
-<ul class="users">
 
 
-
-  <ul class="users">
-    <%= render @users %>
-  </ul>
-
-</ul>
-<%= will_paginate %>
