--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, @user.name) %>
-<h1>This is My room</h1>
+<h1>This is my profile</h1>
 <div class="row">
   <aside class="span4">
     <section>
@@ -8,9 +8,18 @@
         <%= image_tag @user.image_name.url().to_s,width: 100, height:100 %>
       </h1>
 
-      <%= @user.name %>,</br>
-      <%= @user.email %></br>
-      <%= @user.username %></br>
+      <p>
+        <b>Name:</b>
+        <%= @user.name %>,</br>
+      </p>
+      <p>
+        <b>Email:</b>
+        <%= @user.email %></br>
+      </p>
+      <p>
+        <b>User Name:</b>
+        <%= @user.username %></br>
+      </p>
 
     </section>
   </aside>
