rspec bookmark .. controllers p1

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,6 +45,7 @@
                   <li><%= link_to "Bundles Bookmark", bundles_bookmarks_path  %></li>
                   <li><%= link_to "Bundles Items Design ", bundles_items_designs_path  %></li>
                   <li><%= link_to "Bookmarks", bookmarks_path  %></li>
+                  <li><%= link_to "Bookmarks for approval ", index_bookmarks_approval_path  %></li>
                   <li><%= link_to "Bookmarks Categories", bookmarks_categories_path  %></li>
                   <li><%= link_to "Feedback", feedbacks_path  %></li>
                   <li><%= link_to "Notification", notifications_path  %></li>
