--- a/app/views/bundles/show.html.erb
+++ b/app/views/bundles/show.html.erb
@@ -14,6 +14,10 @@
   <b>Description:</b>
   <%= @bundle.description %>
 </p>
+<p>
+  <b>Active:</b>
+  <%= @bundle.active %>
+</p>
 
 <p>
   <b>Theme:</b>
