--- a/app/views/users_mailer/friend_request_email.html.erb
+++ b/app/views/users_mailer/friend_request_email.html.erb
@@ -1,6 +1,6 @@
 <%= @greeting %>
 
-<h1> your friend <%= @user.name %> want to connect with you</h1>
+<h1> your friend <%= @user.username %> want to connect with you</h1>
 <p>  </p>
 
 
