--- a/app/views/users_mailer/signup_email.html.erb
+++ b/app/views/users_mailer/signup_email.html.erb
@@ -1,4 +1,4 @@
-<h1>Greetings <%= @user.name %>,</h1>
+<h1>Greetings <%= @user.username %>,</h1>
 <p>welcome to mywebroom <%= @user.email %> and your
   user name is : <%= @user.username %></p>
 
