--- a/app/views/users_mailer/signup_email.text.erb
+++ b/app/views/users_mailer/signup_email.text.erb
@@ -1,5 +1,5 @@
 
-Greetings <%= @user.name %>,
+Greetings <%= @user.username %>,
 welcome to mywebroom <%= @user.email %> and your
 user name is: <%= @user.username %>
 
