--- a/app/views/users_mailer/friend_request_email.text.erb
+++ b/app/views/users_mailer/friend_request_email.text.erb
@@ -1,7 +1,7 @@
 
 <%= @greeting %>
 
-your friend <%= @user.name %> want to connect with you
+your friend <%= @user.username %> want to connect with you
 
 
 thank you
